--- a/styles/avatar.css
+++ b/styles/avatar.css
@@ -68,8 +68,8 @@ button:hover {
     .container {
          width: 65%;
         padding: 1.5vw;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 20px;
+        margin-right: 20px;
     }
     button {
         font-size: 0.6rem;
@@ -89,8 +89,8 @@ button:hover {
     .container {
         width: 95%;
         padding: 2vw;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
     button {
@@ -108,8 +108,8 @@ button:hover {
     .container {
         width: 95%;
         padding: 3vw;
-        margin-left: auto;
-        margin-right: auto;
+        margin-left: 20px;
+        margin-right: 20px;
     }
 
     button {
