--- a/styles/avatar.css
+++ b/styles/avatar.css
@@ -68,6 +68,7 @@ button:hover {
     .container {
          width: 65%;
         padding: 1.5vw;
+        margin-bottom: 50px;
         margin-left: 20px;
         margin-right: 20px;
     }
@@ -89,6 +90,7 @@ button:hover {
     .container {
         width: 95%;
         padding: 2vw;
+        margin-bottom: 50px;
         margin-left: 20px;
         margin-right: 20px;
     }
@@ -108,6 +110,7 @@ button:hover {
     .container {
         width: 95%;
         padding: 3vw;
+        margin-bottom: 50px;
         margin-left: 20px;
         margin-right: 20px;
     }
