--- a/styles/avatar.css
+++ b/styles/avatar.css
@@ -59,6 +59,15 @@ button:hover {
     background: #c62828;
     transform: translateY(-2px);
 }
+.download_share {
+    background-color: #fff;
+    font-size: 2rem;
+    padding: 15px;
+    margin: 30px;
+   
+   
+   
+}
 
 /* Very small screens (mobile) */
 @media (min-width: 250px) and (max-width: 399px) {
