--- a/styles/avatar.css
+++ b/styles/avatar.css
@@ -8,7 +8,6 @@ body {
     background-attachment: fixed;
     font-family: Arial, sans-serif;
 
-    display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -18,11 +17,12 @@ body {
     width: 90%;
     max-width: 450px;
     margin-top: 50px;
-   margin-bottom: 50px;
+    margin-bottom: 50px;
     padding: 4vw;
     background: rgba(240, 240, 240, 0.95);
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+
 }
 
 .canvas-wrapper {
@@ -59,11 +59,12 @@ button:hover {
     background: #c62828;
     transform: translateY(-2px);
 }
-.download_share {
+.download-share {
     background-color: #fff;
     font-size: 2rem;
     padding: 15px;
     margin: 30px;
+   
    
    
    
