--- a/styles/avatar3.css
+++ b/styles/avatar3.css
@@ -62,6 +62,7 @@ button:hover {
     padding: 10px;
     margin: 30px;
     text-align: center;
+    font-weight: 700;
 }
 
 /* Mobile phones */
@@ -71,6 +72,9 @@ button:hover {
     }
     .container {
         padding: 3vw;
+        margin-left: 20px;
+        margin-right: 20px;
+        
     }
     button {
         font-size: 0.9rem;
@@ -86,11 +90,14 @@ button:hover {
     .container {
         width: 95%;
         padding: 4vw;
+        margin-left: 20px;
+        margin-right: 20px;
+       
     }
     body {
         background-attachment: scroll !important;
     }
     .download-share {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
     }
 }
